fix card alignment

--- a/Eray/style.css
+++ b/Eray/style.css
@@ -56,7 +56,7 @@ body
 .travel-cards 
 {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 30px;
 }
